sprint_7 Реализация файлового менеджера